# remote-ssh

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README-CN.md  README.md  RELEASE_RECEIPT.json  SECURITY.md  SKILL.md  pyproject.toml
agents/: openai.yaml
config/: defaults.json  server_list.template.json
references/: configuration.md  integration-contract.md  regression-scenarios.md  review-checklist.md  server-list-schema.md  workflows.md
scripts/: build_release.py  install_skill.py  mine_remote_ssh_sessions.py  remote_ssh.py  validate_remote_ssh.py
scripts/bat/commands/: request_command.bat  run_request.bat
scripts/bat/config/: configure_remote_ssh.bat
scripts/bat/files/: file_download.bat  file_list.bat  file_stat.bat  request_delete.bat  request_mkdir.bat  request_upload.bat
scripts/bat/validation/: validate_remote_ssh.bat
scripts/bat/workspace/: workspace_check.bat
scripts/powershell/commands/: request_command.ps1  run_request.ps1
scripts/powershell/config/: configure_remote_ssh.ps1
scripts/powershell/files/: file_download.ps1  file_list.ps1  file_stat.ps1  request_delete.ps1  request_mkdir.ps1  request_upload.ps1
scripts/powershell/validation/: validate_remote_ssh.ps1
scripts/powershell/workspace/: workspace_check.ps1
scripts/shell/commands/: request_command.sh  run_request.sh
scripts/shell/config/: configure_remote_ssh.sh
scripts/shell/files/: file_download.sh  file_list.sh  file_stat.sh  request_delete.sh  request_mkdir.sh  request_upload.sh
scripts/shell/validation/: validate_remote_ssh.sh
(+1 files in other folders)
