[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "remote-ssh-skill"
version = "0.1.9"
description = "Agent-usable Codex skill for conservative SSH-based development and test workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Jiyuan Liu", email = "erie@seu.edu.cn" },
  { name = "He Li" },
]
keywords = ["codex-skill", "agent-skill", "ssh", "remote-development", "remote-testing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/Eriemon/remote-ssh"
Repository = "https://github.com/Eriemon/remote-ssh"

[tool.setuptools]
py-modules = []
